src/objects/MonthlyTimeRecordControl__c.object
<CustomObject>
    <fields>
        <fullName>EmployeeId__c</fullName>
        <label>Empleado viculado</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Registros de control mensuales</relationshipLabel>
        <relationshipName>MonthlyTimeRecordControls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FinalWage__c</fullName>
        <description>This formula is incorrect as not all months have same number of days and working hours</description>
        <formula>IF( TotalRecordedByCompany__c &lt;&gt;  (EmployeeId__r.ByContractMonthlyWorkingHours__c) ,TotalRecordedByCompany__c * EmployeeId__r.HourlyWage__c , EmployeeId__r.MonthlyWage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salario final</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NonAcceptedTimeControlRecords__c</fullName>
        <label>Número de registros no aceptados</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RangeEnd__c</fullName>
        <label>Fin de periodo</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RangeStart__c</fullName>
        <label>Inicio de periodo</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalRecordedByCompany__c</fullName>
        <label>Total horas registradas por compañia</label>
        <summarizedField>TimeRecordControl__c.RecordedByCompany__c</summarizedField>
        <summaryForeignKey>TimeRecordControl__c.TimeRecordControlId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Registro de control mensual</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RCM-{0000}</displayFormat>
        <label>Número de registro de control mensual</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registros de control mensuales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>